--- a/preamble.tex
+++ b/preamble.tex
@@ -4,8 +4,8 @@
 \usepackage{balance, fancyhdr}
 \usepackage[perpage]{footmisc}
 \usepackage{titlesec, caption}
-\usepackage{amsmath, xfrac, upgreek}
-\usepackage{amsthm}
+\usepackage{xfrac, upgreek}
+\usepackage{amsmath, amsthm, yhmath}
 \usepackage{fontspec, txfonts, pifont}
 \usepackage{tikz, tkz-euclide}
 \usepackage{graphicx, incgraph}
